# MARL_transfer

./: .gitignore  README.md  pyproject.toml
.omx/: metrics.json
.omx/logs/: tmux-hook-2026-06-10.jsonl  turns-2026-06-10.jsonl
.omx/state/: notify-fallback-authority-state.json  update-check.json
configs/env/overcooked/: default.yaml  pairs.yaml
docs/: coordination_aware_selective_transfer_general.md  overcooked_environment_pairs_ko.md  문제상황.md
scripts/: check_env.py  check_overcooked_pairs.py
src/negtransfer_marl/algorithms/ippo/: __init__.py  networks.py  rollout.py  train.py
src/negtransfer_marl/baselines/: __init__.py  encoder_only.py  full_transfer.py  scratch.py  skill_only.py
src/negtransfer_marl/envs/: __init__.py  overcooked_layouts.py
src/negtransfer_marl/runners/: train_overcooked.py
tests/: test_environment_setup.py  test_overcooked_layouts.py  test_project_structure.py
