[project]
name = "negtransfer-marl"
version = "0.1.0"
description = "Detecting and mitigating coordination-induced negative transfer in cooperative MARL."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "jax[cuda12]==0.4.38",
    "jaxmarl==0.1.0",
    "overcooked-ai==1.1.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "pyyaml>=6.0.2",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
    "scipy>=1.11.0,<1.13",
    "tqdm>=4.66.0",
    "tensorboard>=2.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/negtransfer_marl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
